ChangeLog for KNotes
====================

2003/06/17  Michael Brade <brade@kde.org>

    * fixed #58338: show note title in taskbar
    * various code and style optimisations

2003/06/13  Maks Orlovich <mo002j@mail.rochester.edu>

    * fixed #59028: if title is too long to fit, left-align it, so we don't
      end up showing its middle

2003/04/25  Michael Brade <brade@kde.org>

    * HACK to fix #57367: Always On Top property lost when hide->show a note

2003/04/04  Luboš Luňák <l.lunak@kde.org>

    * fixed #56625: compensate for the menu separator when using the index

2003/02/06  Stephan Binner <binner@kde.org>

    * fixed #54108: "&" in note tile will be displayed as underscore in the menu

2003/01/26  Michael Brade <brade@kde.org>

    * use libkcals new Attachment class
    * the config file attachments have "application/x-knotes-config" mime type

2002/11/05  Michael Brade <brade@kde.org>

    * need to write the KNotes version to knotesrc, otherwise we'll get
      an additional new note the next startup

2002/11/03  Michael Brade <brade@kde.org>

    * found a nice way to prevent loosing focus when opening the RMB menu

2002/11/01  Michael Brade <brade@kde.org>

    * use iCalendar's uids as note ids, saves quite some code and adds the
      possibility to have more that one note using the same title. Also, now
      a note will never change its id again.

2002/10/31  Michael Brade <brade@kde.org>

    * faster shutdown

2002/10/30  Michael Brade <brade@kde.org>

    * faster startup
    * support for loading KOrganizer's journals:
        - use default config
        - set the start date as summary
    * support for a note on different desktops: check position and let KWin do
      the placement if it is illegal
    * fixed small bug in attachments path

2002/10/21  Michael Brade <brade@kde.org>

    * new version number, we now have KNotes 3.0
    * finished iCalendar code, KNotes is now fully working with libkcal - theoretically,